// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contextualbar Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fs953a"
    >
      <div
        class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-1pzjc7w"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-edl2v6"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1tmbvtv"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
              title="Back"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-arrow-back rcx-icon rcx-css-4pvxx3"
              >
                ⦉
              </i>
            </button>
            <div
              class="rcx-box rcx-box--full rcx-css-1spko5i"
            >
              Contextualbar Title
            </div>
            <div
              class="rcx-button-group rcx-button-group--align-start"
              role="group"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button  rcx-button-group__item rcx-css-ue04py"
                title="Title"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-new-window rcx-icon rcx-css-4pvxx3"
                >
                  ⁽
                </i>
              </button>
              <button
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button  rcx-button-group__item rcx-css-ue04py"
                title="Add user"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-add-user rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
              <button
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button  rcx-button-group__item rcx-css-ue04py"
                title="Close"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-vertical-bar__section rcx-css-14bkbcs"
        >
          <label
            class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
          >
            <input
              class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
              placeholder="Search"
              size="1"
              type="text"
            />
            <span
              class="rcx-box rcx-box--full rcx-input-box__addon"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </span>
          </label>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-1ptgac4"
        />
        <div
          class="rcx-box rcx-box--full rcx-css-4jy2w6"
        >
          <div
            class="rcx-button-group rcx-button-group--align-start"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button  rcx-button-group__item rcx-css-1qcz93u"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button  rcx-button-group__item rcx-css-1qcz93u"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Save
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--large-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button  rcx-button-group__item"
              title="More"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-menu rcx-icon rcx-css-1x2l7ts"
              >
                
              </i>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Contextualbar Rendering] renders Empty without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fs953a"
    >
      <div
        class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-1pzjc7w"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-edl2v6"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1tmbvtv"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-ue04py"
              title="Back"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-arrow-back rcx-icon rcx-css-4pvxx3"
              >
                ⦉
              </i>
            </button>
            <div
              class="rcx-box rcx-box--full rcx-css-1spko5i"
            >
              Contextualbar Empty
            </div>
            <div
              class="rcx-button-group rcx-button-group--align-start"
              role="group"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button  rcx-button-group__item rcx-css-ue04py"
                title="Title"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-new-window rcx-icon rcx-css-4pvxx3"
                >
                  ⁽
                </i>
              </button>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-vertical-bar__content rcx-css-r8c38r"
        >
          <div
            class="rcx-states"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-states__icon rcx-icon--name-magnifier rcx-icon rcx-css-d884y5"
            >
              
            </i>
            <h3
              class="rcx-states__title"
            >
              Nothing Found
            </h3>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-4jy2w6"
        >
          Footer
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Contextualbar Rendering] renders Skeleton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fs953a"
    >
      <div
        class="rcx-box rcx-box--full rcx-vertical-bar rcx-css-1pzjc7w"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-edl2v6"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-1bdyjik rcx-css-1tmbvtv"
          >
            <span
              class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
            />
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-css-m843eh"
        >
          <span
            class="rcx-box rcx-box--full rcx-skeleton--rect rcx-skeleton rcx-css-kq1jj5"
          />
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton"
          />
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton"
          />
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton"
          />
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton"
          />
          <span
            class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
